build_errors.txt
    Checking romm-cli v0.4.0 (C:\Users\Patri\Projects\romm-cli)
error[E0004]: non-exhaustive patterns: `Commands::Update` not covered
  --> src\frontend\cli.rs:8:11
   |
 8 |     match command {
   |           ^^^^^^^ pattern `Commands::Update` not covered
   |
note: `Commands` defined here
  --> src\commands\mod.rs:67:10
   |
67 | pub enum Commands {
   |          ^^^^^^^^
...
82 |     Update,
   |     ------ not covered
   = note: the matched value is of type `Commands`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
27 ~         )),
28 ~         Commands::Update => todo!(),
   |

For more information about this error, try `rustc --explain E0004`.
error: could not compile `romm-cli` (lib) due to 1 previous error
